Development Portal (2015-03-03 shi)
==============================
Changed word wrap for donor names in money table
Added more descriptions for how data is calculated
Footer translations added


Development Portal (2015-02-27 shi)
==============================
Fixed footer wording


Development Portal (2015-02-26 shi)
==============================
Fixed table header budget list


Development Portal (2015-02-02 shi)
==============================
Fixed currency typo


Development Portal (2015-01-30 shi)
==============================
Changed remaining "Transactions" to "Spend"
Background-image fix
New Currency exchange
Changed "High Visibility" to "Print-Friendly"
Fix chart widths
Fix chart legibility and overall layout


Development Portal (2014-11-30 shi)
==============================
Added link to generator examples news post
Fixed header for list transactions


Development Portal (2014-11-28 shi)
==============================
Fix generator widths consistency in iframes
Added new instructions to generator
Edited CSS for news posts


Development Portal (2014-11-27 shi)
==============================
Changed table links to all transactions
Edited CSS for rgba styles
Fixed transparency for generator


Development Portal (2014-11-23 shi)
==============================
Changed CSS, layout and text for generator
Reordered options for dropdown
Added arrows for dropdown multi-select
Fixed CSS & layout for index page for mobile


Development Portal (2014-11-21 shi)
==============================
Edited data source in text file
CSS fix for beige alert High Vis


Development Portal (2014-11-18 shi)
==============================
CSS fix for CRS table header
CSS fix for colours, border and headers in High Vis
CSS fix for all publishers table headers


Development Portal (2014-11-14 shi)
==============================
BETA alert across the site
Added Translations
BETA alert on the Generator page


Development Portal (2014-11-13 shi)
==============================