@@ -151,9 +151,11 @@ a.stats_link.missing span	{color:#000;}
 .description span.title	{display:block; color:#000; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-top:1px solid #000; border-bottom:1px solid #000;}
 .description span.title.sub	{font-size:1.0em; border:0; margin:0; padding-bottom:10px; font-weight:bold;}
 .description p			{padding:15px 0; font-size:1.2em; color:#000; line-height:1.2em; word-spacing:0.07em;}
+.description p.about_data	{border-top:1px solid #000; margin-top:30px;}
 .description a			{color:#000;}
 .description a:hover	{color:#000; text-decoration:underline;}
-a.read					{display:inline-block; color:#000; font-size:1.1em;}
+a.read					{display:inline-block; width:50%; color:#000; font-size:1.1em;}
+a.read.right			{text-align:right;}
 a.read:hover			{color:#000; text-decoration:underline;}
 
 
