@@ -159,10 +159,12 @@ a.stats_link.missing span	{color:#008FFF;}
 .description span.title	{display:block; color:#FFF; line-height:1.35em; font-size:1.4em; margin-top:20px; padding:10px 0; border-top:1px solid #FFF; border-bottom:1px solid #FFF;}
 .description span.title.sub	{font-size:1.0em; border:0; margin:0; padding-bottom:10px; font-weight:bold;}
 .description p			{padding:15px 0; font-size:1.0em; color:#FFF; line-height:1.4em;}
+.description p.about_data	{border-top:1px solid #fff; margin-top:30px;}
 .description a			{color:#A8C5E5; text-decoration:none;}
 .description a:hover	{color:#FFF; text-decoration:underline;}
-a.read					{display:inline-block; text-decoration:none; color:#A8C5E5; font-size:1.0em;}
-a.read:hover			{color:#FFF; text-decoration:underline;}
+a.read					{display:inline-block; width:50%; text-decoration:none; color:#A8C5E5; font-size:1.0em;}
+a.read.right			{text-align:right;}
+a.read:hover			{color:#A8C5E5; text-decoration:underline;}
 
 
 /*	Generic styles
