@@ -454,6 +454,9 @@ Español
 #read_more_text
 阅读全文
 
+#read_links_text
+归属和链接此日期来源
+
 #xml_data_description_title_text
 数据是如何计算出来的？
 
