@@ -452,7 +452,10 @@ Top of page
 About d-portal.org
 
 #read_more_text
-Read more about data quality and why it matters
+About data quality and why it matters
+
+#read_links_text
+Attribution and links to data sources
 
 #xml_data_description_title_text
 How is the data calculated?
