@@ -454,6 +454,9 @@ A propos de d-portal.org
 #read_more_text
 Lire la suite
 
+#read_links_text
+Attribution et relie cette sources de date
+
 #xml_data_description_title_text
 Comment les données sont -elle calculée?
 
