@@ -451,6 +451,9 @@ d-portal.org बारे में
 #read_more_text
 और अधिक पढ़ें
 
+#read_links_text
+रोपण और लिंक इस तिथि के सूत्रों का कहना है
+
 #xml_data_description_title_text
 कैसे डेटा की गणना है?
 
