@@ -454,6 +454,9 @@ d-portal.org について
 #read_more_text
 続きを読む
 
+#read_links_text
+アトリビューションとのリンクこの日付源
+
 #xml_data_description_title_text
 データはどのように計算されますか？
 
