@@ -451,6 +451,9 @@ Acerca de d-portal.org
 #read_more_text
 Leer más
 
+#read_links_text
+Reconocimiento y enlaces de esta fecha fuentes
+
 #xml_data_description_title_text
 ¿Cómo se calcula la información?
 
