@@ -40,7 +40,9 @@
 		<p><span class="title sub">{main_data_paragraph4_text}</span>{main_data_paragraph5_text}</p>
 		<p><span class="title sub">{main_data_paragraph6_text}</span>{main_data_paragraph7_text}</p>
 		<p>{main_data_paragraph8_text}</p>
-		<a href="#view=data_quality" class="read">{read_more_text}</a>
+		<p class="about_data">
+			<a href="#view=data_quality" class="read">{read_more_text}</a><a href="about.html#sources" class="read right">{read_links_text}</a>
+		</p>
 	</div>
 </div>
 
