@@ -38,8 +38,8 @@ a.top.dash:hover	{border-top:5px solid #2DA620;}
 .about_wrap.dash	{background-color:#2DA620; padding:0 0 40px 0;}
 .about_wrap.dq		{background-color:#724900; padding:0 0 50px 0;}
 .about_wrap.q		{background-color:#4F3200; padding:0 0 40px 0;}
-.about_wrap.sources	{background-color:#201500; padding:0 0 50px 0;}
-.about_wrap.git		{background-color:#fff; padding:80px 0 60px 0;}
+.about_wrap.sources	{background-color:rgba(10, 14, 20, 0.35); padding:120px 0;}
+.about_wrap.git		{background-color:#fff; padding:160px 0 120px 0;}
 
 
 /*	Text styles
