@@ -163,7 +163,7 @@
 
 #sources
 <span id="sources"></span>
-<div class="about_wrap more">
+<div class="about_wrap sources">
 	<div class="default">
 		<div class="sources_head">{sources_title_text}</div>
 		<table class="sources">
