@@ -1,3 +1,8 @@
+Static site (2015-03-03 shi)
+==============================
+Changed css styles for attribution section
+
+
 Static site (2015-02-24 shi)
 ==============================
 Changed layout for columns of Publishers / IDs
