@@ -3,6 +3,8 @@ Development Portal (2015-03-03 shi)
 Changed word wrap for donor names in money table
 Added more descriptions for how data is calculated
 Footer translations added
+Added attribution link to footer
+Attribution link translations added
 
 
 Development Portal (2015-02-27 shi)
